<resources>
    <string name="app_name">LAB03</string>
    <string name="welcome_to_six_senses_resort">La la la Six Senses Resort</string>
    <string name="our_meow_meow">Lo Lo  Meow Meow</string>
    <string name="reserve_now">Le le le!!!</string>
    <string name="name">Name</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="book">Book</string>
    <string name="booking_information">Booking Information</string>
</resources>
